# PyWAFT

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
core/: __init__.py  app_data.py  browser.py  page_factory.py
core/database/: __init__.py  context.py  strategy.py
mealie/database/: __init__.py  _models.py  queries.py
mealie/pages/: home_page.py  login_page.py  shopping_list_page.py  shopping_lists_page.py
requirements/: base.txt  dev.txt
tests/: conftest.py  test_edit_account_data.py  test_login.py  test_main_page.py  test_shoping_cart.py  test_start_page.py
tests/api/: conftest.py  test_about_app.py  test_users.py
tests/cart/: conftest.py  test_edit_account_data.py  test_login.py  test_main_page.py  test_shoping_cart.py
tests/echoer/: conftest.py
tests/echoer/api/: test_rest.py  test_rpc.py  test_soap.py
tests/mealie/api/: conftest.py  test_about_app.py  test_users.py
tests/mealie/ui/: __init__.py  conftest.py  test_login.py  test_shopping_list.py
tests/ui/: conftest.py  test_login.py  test_shopping_list.py
