[project]
name = "PyWAFT"
version = "0.1"
readme = "README.md"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
fixable = ["ALL"]
